fix(ui): header bar will only be centered on small and medium displays

--- a/frontend/src/shared/components/organisms/header-bar/header-bar.scss
+++ b/frontend/src/shared/components/organisms/header-bar/header-bar.scss
@@ -34,13 +34,16 @@
   height: 100%;
   width: 100%;
 
-  gap: none;
+  gap: 0px;
+  justify-content: center;
+
+  @include respond(md) {
+    justify-content: start;
+  }
 
   @include respond(sm) {
     gap: $gap--small;
   }
-
-  justify-content: center;
 
   &__router {
     @include respond(md) {
